refactor: change to run pipeline on pull request events

--- a/.github/workflows/code-integration.yaml
+++ b/.github/workflows/code-integration.yaml
@@ -2,8 +2,7 @@ name: Code integration
 
 on:
     pull_request: 
-        types: [opened, reopened]
-    push:
+        types: [opened, reopened, synchronize]
         branches:
             - '**'
 
