chore: change to run pipeline on push main and develop branches

--- a/.github/workflows/code-integration.yaml
+++ b/.github/workflows/code-integration.yaml
@@ -5,6 +5,10 @@ on:
         types: [opened, reopened, synchronize]
         branches:
             - '**'
+    push:
+        branches:
+            - 'main'
+            - 'develop'
 
 jobs:
     unitary_tests:
