--- a/.github/workflows/code-delivery.yaml
+++ b/.github/workflows/code-delivery.yaml
@@ -12,8 +12,8 @@ env:
 
 jobs:
     deploy:
+      if: ${{ github.event.workflow_run.head_branch == 'main' && github.event.workflow_run.conclusion == 'success' }}
       runs-on: ubuntu-22.04
-      if: ${{github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main'}}
       steps:
         - name: Checkout code
           uses: actions/checkout@v4
